# deepl

./: .gitignore  CustomDataset.py  README.md  check_nearest_neighbor.ipynb  check_nearest_neighbour.py  config_file.py  dataset_deneme.py  main.py  model_deneme.py  pyproject.toml
